french translation fix

--- a/fr/index.html
+++ b/fr/index.html
@@ -79,10 +79,10 @@
           </p>
 
             <div class="page-header">
-              <h1>Nouvelles et faits saillants <small class="blue">l'énergie verte</small></h1>
+              <h1>Actualités <small class="blue">l'énergie verte</small></h1>
             </div>
 
-    
+
             <div class="media">
             <div class="media-left">
         <a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">
@@ -107,7 +107,7 @@
             </a>
             </div>
             <div class="media-body">
-            <h4 class="media-heading">Utilitaire solaire peut coûter moins cher, mais il est également intéressant Moins</h4>
+            <h4 class="media-heading">Utilitaire solaire peut coûter moins cher, mais il est également moins intéressant</h4>
             <p>John Farrell conteste une nouvelle étude montrant que l'énergie solaire est l'option la moins chère.</p>
             <p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">En savoir plus...</a></p>
             </div>
