french comapny translation fix

--- a/fr/company.html
+++ b/fr/company.html
@@ -72,11 +72,12 @@
               <h1>Italy New Energy <small class="blue">profil</small></h1>
             </div>
 
+
             <p>
-              Italia Nuova Energia è una società italiana fondata nel 2001.Italy Nuova Energia è uno dei principali fornitori di prodotti e servizi integrati, dalla fornitura di energia elettrica e di gas naturale per la produzione di energia idroelettrica e termoelettrica e lo sviluppo di progetti e le imprese dei settori delle energie rinnovabili.
+              Italie New Energy est une société italienne fondée en 2001.Italy New Energy est l'un des principaux fournisseurs de produits et services intégrés-de la fourniture de l'énergie électrique et de gaz naturel pour la production d'énergie hydroélectrique et thermoélectrique et le développement de projets et entreprises dans les secteurs des énergies renouvelables.
             </p>
             <p>
-              Italia Nuova Energia in grado di fornire servizi e consulenza nei seguenti settori: gestione di progetti di risparmio energetico e di promozione, emissioni di CO 2 azioni e diritti di gestione, intermediazione e la richiesta di potenza certificato gestione bianco e verde, e di energia elettrica e gas valutazione delle proposte e valutazione.
+              Italie New Energy peut fournir des services et de conseil dans les domaines suivants: la gestion de projet d'économie d'énergie et la promotion, CO 2 actions et de droits d'émission, gestion de l'échange de certificats et puissance blanc et vert, et de l'électricité et de l'approvisionnement en gaz évaluation des propositions et notes.
             </p>
 
 
