fr company text

--- a/fr/company.html
+++ b/fr/company.html
@@ -77,7 +77,9 @@
               Italie New Energy est une société italienne fondée en 2001.Italy New Energy est l'un des principaux fournisseurs de produits et services intégrés-de la fourniture de l'énergie électrique et de gaz naturel pour la production d'énergie hydroélectrique et thermoélectrique et le développement de projets et entreprises dans les secteurs des énergies renouvelables.
             </p>
             <p>
-              Italie New Energy peut fournir des services et de conseil dans les domaines suivants: la gestion de projet d'économie d'énergie et la promotion, CO 2 actions et de droits d'émission, gestion de l'échange de certificats et puissance blanc et vert, et de l'électricité et de l'approvisionnement en gaz évaluation des propositions et notes.
+              Italie New Energy peut fournir des services et de conseil dans les domaines suivants: la gestion de projet d'économie d'énergie
+               et la promotion, CO 2 actions et de droits d'émission, gestion de l'échange de certificats blanc et vert, de l'électricité
+               et de l'approvisionnement en gaz.
             </p>
 
 
