fr activities text

--- a/fr/activities.html
+++ b/fr/activities.html
@@ -100,9 +100,16 @@ Italie New Energy est un grossiste sur le marché de l'énergie électrique ital
   <div id="menu2" class="tab-pane fade">
     <h3>Services</h3>
   <p>
-    Italie New Energy offre aux entreprises non seulement l'énergie électrique et du gaz. Notre relation étroite avec les producteurs les plus importants d'Europe de l'énergie électrique et de gaz et les commerçants, nous permet d'offrir des prix compétitifs.
+    Italie New Energy offre aux entreprises non seulement l'énergie électrique et du gaz.
+    Notre relation étroite avec les producteurs les plus importants d'Europe de l'énergie électrique et de gaz et les commerçants, nous permet d'offrir des prix compétitifs.
 </p><p>
-    Nous pouvons identifier les meilleures propositions électricité et de gaz, en comparant les différentes offres et évaluer les économies potentielles. Nous pouvons garder nos clients mises à jour sur les changements dans les lois et règlements en temps opportun, analyser la faisabilité de nouvelles usines de production et de la rénovation des installations existantes, et d'optimiser les opérations de l'usine en termes d'efficacité des coûts et respect de l'environnement. De plus, nous faisons la promotion des initiatives d'économie d'énergie, la gestion de la nécessité et de la disponibilité et de la négociation de certificats verts (l'Italie New Energy et d'autres producteurs »), et de coordonner et de gérer" Emission Trading ", la négociation des émissions de CO 2 des crédits.
+    Nous pouvons identifier les meilleures propositions d'électricité et de gaz, en comparant les différentes
+    offres, évaluer les économies potentielles. Nous pouvons garder nos clients mis à jour sur les changements
+    dans les lois et règlements en temps opportun, analyser la faisabilité de nouvelles usines de production et de la
+     rénovation des installations existantes, optimiser les opérations de d'usine en termes d'efficacité des coûts
+      et respect de l'environnement. De plus, nous faisons la promotion des initiatives d'économie d'énergie, la gestion
+       de la nécessité et de la disponibilité, la négociation de certificats verts ( Italie New Energy et d'autres
+       producteurs »), de coordonner et de gérer" Emission Trading ", la négociation des émissions de CO 2 des crédits.
 </p>
 
   </div>
