fr activities text

--- a/fr/activities.html
+++ b/fr/activities.html
@@ -106,7 +106,7 @@ Italie New Energy est un grossiste sur le marché de l'énergie électrique ital
     Nous pouvons identifier les meilleures propositions d'électricité et de gaz, en comparant les différentes
     offres, évaluer les économies potentielles. Nous pouvons garder nos clients mis à jour sur les changements
     dans les lois et règlements en temps opportun, analyser la faisabilité de nouvelles usines de production et de la
-     rénovation des installations existantes, optimiser les opérations de d'usine en termes d'efficacité des coûts
+     rénovation des installations existantes, optimiser les opérations d'usine en termes d'efficacité des coûts
       et respect de l'environnement. De plus, nous faisons la promotion des initiatives d'économie d'énergie, la gestion
        de la nécessité et de la disponibilité, la négociation de certificats verts ( Italie New Energy et d'autres
        producteurs »), de coordonner et de gérer" Emission Trading ", la négociation des émissions de CO 2 des crédits.
