update it translation

--- a/it/activities.html
+++ b/it/activities.html
@@ -44,11 +44,11 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Casa</a></li>
-            <li role="presentation"><a href="company.html">Società</a></li>
+            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="company.html">Azienda</a></li>
             <li role="presentation" class="active"><a href="activities.html">Attività</a></li>
-            <li role="presentation"><a href="news.html">Notizie</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
+            <li role="presentation"><a href="news.html">News</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatti</a></li>
           </ul>
         </nav>
         <h3 class="text-muted"><img src="/img/logo.gif"></h3>
@@ -84,14 +84,13 @@
   <div id="home" class="tab-pane fade in active">
     <h3>Energia</h3>
 <p>
-  Italia Nuova Energia è un grossista nel mercato elettrico italiano. Siamo impegnati nel commercio di energia elettrica per le imprese e operare sulla Borsa elettrica italiana.
-</p>
+Italie New Energy attraverso GeoEnergie, è attiva in qualità di grossista nel mercato elettrico italiano, occupandosi di trading e compravendita di energia elettrica per le aziende. E’ inoltre operativa nella Borsa Elettrica Italiana (Italian Power EXchange).</p>
   </div>
   <div id="menu1" class="tab-pane fade">
     <h3>Gas</h3>
 
   <p>
-    Siamo attivi nel mercato del gas anche. Italia Nuova Energia è un grossista di gas naturale sul mercato italiano. Come è autorizzato a vendere agli utenti finali.
+    Italie New Energy è infatti grossista nel mercato italiano del gas naturale. In quanto impresa autorizzata alla vendita ai clienti finali, si occupa di approvvigionamento, trading e commercializzazione di gas naturale a clienti industriali.
 
   <p>
 
@@ -99,9 +98,10 @@
   <div id="menu2" class="tab-pane fade">
     <h3>Servizi</h3>
   <p>
-    Italia Nuova Energia offre alle aziende non solo energia elettrica e gas. La nostra stretta relazione con i più importanti produttori e commercianti di energia elettrica e del gas europei, ci permette di offrire prezzi competitivi.
+Italie New Energy offre alle aziende non solo energia elettrica e gas, ma anche attraverso GeoEnergie, servizi di informazione e consulenza. I rapporti privilegiati con i più importanti produttori e traders europei di energia elettrica e di gas, ci consentono di proporre prezzi competitivi.
 </p><p>
-  Siamo in grado di individuare le migliori proposte fornitura di energia elettrica e di gas, confrontando le varie offerte e valutare potenziali risparmi. Siamo in grado di mantenere i nostri clienti aggiornati sui cambiamenti delle leggi e dei regolamenti in maniera tempestiva, analizzare la fattibilità di nuovi impianti di produzione e il revamping di impianti esistenti e ottimizzare il funzionamento degli impianti in termini di efficienza dei costi e rispetto ambientale. Cosa c'è di più, promuoviamo iniziative per il risparmio energetico, la gestione la necessità e la disponibilità e il commercio di certificati verdi (Italia Nuovo di Energia e di altri produttori '), e coordinare e gestire "Emission Trading", lo scambio di crediti di emissione di CO 2.
+  Informiamo tempestivamente le aziende sugli ultimi aggiornamenti delle normative di settore, analizziamo la fattibilità di nuovi impianti di produzione o il potenziamento di quelli già esistenti, ottimizziamo il funzionamento degli impianti, dal punto di vista economico ed ambientale. E ancora, promuoviamo iniziative volte al risparmio energetico, gestiamo i fabbisogni, le disponibilità e il trading di Certificati Verdi per Geogreen e per impianti di altri produttori esterni.
+  Coordiniamo e gestiamo le attività di “Emission Trading”, il sistema di scambio di quote di emissioni di CO 2 in atmosfera.
 
 </p>
 
