--- a/it/company.html
+++ b/it/company.html
@@ -43,11 +43,11 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Casa</a></li>
-            <li role="presentation" class="active"><a href="company.html">Società</a></li>
+            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation" class="active"><a href="company.html">Azienda</a></li>
             <li role="presentation"><a href="activities.html">Attività</a></li>
-            <li role="presentation"><a href="news.html">Notizie</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
+            <li role="presentation"><a href="news.html">News</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatti</a></li>
           </ul>
         </nav>
         <h3 class="text-muted"><img src="/img/logo.gif"></h3>
@@ -73,10 +73,10 @@
             </div>
 
             <p>
-              Italia Nuova Energia è una società italiana fondata nel 2001.Italy Nuova Energia è uno dei principali fornitori di prodotti e servizi integrati, dalla fornitura di energia elettrica e di gas naturale per la produzione di energia idroelettrica e termoelettrica e lo sviluppo di progetti e le imprese dei settori delle energie rinnovabili.
+              Italie New Energy azienda italiana nata nel 2001.Italie New Energy si presenta oggi come uno dei più qualificati fornitori di un sistema integrato di prodotti e di servizi: dalla fornitura di Energia Elettrica e di Gas Naturale, alla produzione di Energia Idroelettrica e Termoelettrica - impianto di cogenerazione -, allo sviluppo di progetti e di attività specifiche nel settore delle Energie Rinnovabili.
             </p>
             <p>
-              Italia Nuova Energia in grado di fornire servizi e consulenza nei seguenti settori: gestione di progetti di risparmio energetico e di promozione, emissioni di CO 2 azioni e diritti di gestione, intermediazione e la richiesta di potenza certificato gestione bianco e verde, e di energia elettrica e gas valutazione delle proposte e valutazione.
+              Italie New Energy in grado di fornire inoltre servizi e consulenza quali, la gestione e la promozione di iniziative per il risparmio energetico, la gestione delle quote e dei diritti per le emissioni di CO2 in atmosfera, il trading di certificati bianchi e verdi e la relativa gestione dei fabbisogni, l'individuazione delle migliori proposte di fornitura di energia elettrica e di acquisto di gas confrontando le diverse offerte. E' inoltre operativa nella Borsa Elettrica italiana e nell'ambito del trading di energia elettrica e della vendita di gas naturale.
             </p>
 
 
