--- a/it/index.html
+++ b/it/index.html
@@ -43,11 +43,11 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="index.html">Casa</a></li>
-            <li role="presentation"><a href="company.html">Società</a></li>
+            <li role="presentation" class="active"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="company.html">Azienda</a></li>
             <li role="presentation"><a href="activities.html">Attività</a></li>
-            <li role="presentation"><a href="news.html">Notizie</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
+            <li role="presentation"><a href="news.html">News</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatti</a></li>
           </ul>
         </nav>
         <h3 class="text-muted"><img src="/img/logo.gif"></h3>
@@ -55,7 +55,7 @@
 
 
 <ol class="breadcrumb">
-  <li><a href="#" class="active">Casa</a></li>
+  <li><a href="#" class="active">Home</a></li>
 </ol>
 
 
@@ -74,7 +74,7 @@
             </div>
 
             <p>
-              Italia Nuova Energia è una società italiana fondata nel 2001.Italy Nuova Energia è uno dei principali fornitori di prodotti e servizi integrati, dalla fornitura di energia elettrica e di gas naturale per la produzione di energia idroelettrica e termoelettrica e lo sviluppo di progetti e le imprese dei settori delle energie rinnovabili.
+              Italie New Energy azienda italiana nata nel 2001.Italie New Energy si presenta oggi come uno dei più qualificati fornitori di un sistema integrato di prodotti e di servizi: dalla fornitura di Energia Elettrica e di Gas Naturale, alla produzione di Energia Idroelettrica e Termoelettrica - impianto di cogenerazione -, allo sviluppo di progetti e di attività specifiche nel settore delle Energie Rinnovabili.
 
           </p>
 
