--- a/it/news.html
+++ b/it/news.html
@@ -43,11 +43,11 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Casa</a></li>
-            <li role="presentation"><a href="company.html">Società</a></li>
+            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="company.html">Azienda</a></li>
             <li role="presentation"><a href="activities.html">Attività</a></li>
-            <li role="presentation" class="active"><a href="news.html">Notizie</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
+            <li role="presentation" class="active"><a href="news.html">News</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatti</a></li>
           </ul>
         </nav>
         <h3 class="text-muted"><img src="/img/logo.gif"></h3>
