update it translation

--- a/it/activities.html
+++ b/it/activities.html
@@ -90,8 +90,7 @@ Italie New Energy attraverso GeoEnergie, è attiva in qualità di grossista nel 
     <h3>Gas</h3>
 
   <p>
-    Italie New Energy è infatti grossista nel mercato italiano del gas naturale. In quanto impresa autorizzata alla vendita ai clienti finali, si occupa di approvvigionamento, trading e commercializzazione di gas naturale a clienti industriali.
-
+    Italie New Energy è infatti grossista nel mercato italiano del gas naturale. In quanto impresa autorizzata alla vendita ai clienti finali.
   <p>
 
   </div>
