update it translation

--- a/it/activities.html
+++ b/it/activities.html
@@ -90,14 +90,14 @@ Italie New Energy attraverso GeoEnergie, è attiva in qualità di grossista nel 
     <h3>Gas</h3>
 
   <p>
-    Italie New Energy è infatti grossista nel mercato italiano del gas naturale. In quanto impresa autorizzata alla vendita ai clienti finali.
+    Italie New Energy è infatti grossista nel mercato europeo del gas naturale. In quanto impresa autorizzata alla vendita ai clienti finali.
   <p>
 
   </div>
   <div id="menu2" class="tab-pane fade">
     <h3>Servizi</h3>
   <p>
-Italie New Energy offre alle aziende non solo energia elettrica e gas, ma anche attraverso GeoEnergie, servizi di informazione e consulenza. I rapporti privilegiati con i più importanti produttori e traders europei di energia elettrica e di gas, ci consentono di proporre prezzi competitivi.
+Italie New Energy offre alle aziende non solo energia elettrica e gaz. I rapporti privilegiati con i più importanti produttori e traders europei di energia elettrica e di gas, ci consentono di proporre prezzi competitivi.
 </p><p>
   Informiamo tempestivamente le aziende sugli ultimi aggiornamenti delle normative di settore, analizziamo la fattibilità di nuovi impianti di produzione o il potenziamento di quelli già esistenti, ottimizziamo il funzionamento degli impianti, dal punto di vista economico ed ambientale. E ancora, promuoviamo iniziative volte al risparmio energetico, gestiamo i fabbisogni, le disponibilità e il trading di Certificati Verdi per Geogreen e per impianti di altri produttori esterni.
   Coordiniamo e gestiamo le attività di “Emission Trading”, il sistema di scambio di quote di emissioni di CO 2 in atmosfera.
